--- a/_content/index.html
+++ b/_content/index.html
@@ -2,43 +2,28 @@
 title: dbt learn
 permalink: /
 days:
-  - name: Day 1
-    activities:
-      - Intros
-      - Why SQL?
-      - Select, Where, Group by, Order by
-      - Common SQL functions
-      - Databases
-      - Joins, ERDs
-      - Window functions
-      - Lunch + Networking
-      - Refactoring Queries
-      - Style guides
-      - Version control
-      - bash
-      - git
+  - name: Day 1:
+      - Intro to SQL
+      - Common to Advanced SQL functions
+      - ERDs and Executing Joins
+      - Refactoring "bad" queries
+      - Version control (git, bash)
       - Making Pull Requests
-  - name: Day 2
-    activities:
-      - What is an analyst?
-      - dbt setup and installation
+  - name: Day 2:
       - What is dbt?
       - Data warehouse design
       - dbt fundamentals
-      - Lunch + Networking
       - Incremental models
       - Testing and Continuous Integration
       - Documentation + Package Management
       - Design patterns
+  - name: Day 3:
       - Using Jinja
-  - name: Day 3
-    activities:
+      - Creating a macro
       - Work applications
       - KPIs for business units
-      - Problem sets
-      - Lunch + Networking
-      - Class discussion
-      - Q&amp;A
+      - Paired problem sets
+      - Optimizing your SQL code
 ---
 <div class="bg-navy-darker">
 	<div class="section-lg text-white text-navy-lightest">
@@ -128,6 +113,8 @@ days:
 					<div class="text-contain text-center">
 						<h3 class="h2">Want to learn from the best?</h3>
                         <p><a href="#" class="btn btn-primary btn-lg arrow-right">Register now</a></p>
+                        <br>
+                        dbt learn will be hosted in Philadelphia, PA once per month.
 					</div>
 				</div>
 			</div>
