--- a/_content/index.html
+++ b/_content/index.html
@@ -46,7 +46,7 @@ canvas {
 				<div class="col-lg-8">
 					<div class="text-contain">
 						<h1 class="h0">Learn from the best</h1>
-                        <p class="text-large">dbt learn is a three day in-person training program designed to empower analysts.</p>
+                        <p class="text-large">dbt learn is a three day in-person training program designed to <br> empower analysts.</p>
 					</div>
 				</div>
 				<div class="col-lg-4" style="z-index: 10">
