--- a/_content/index.html
+++ b/_content/index.html
@@ -17,7 +17,7 @@ days:
       - dbt fundamentals
       - Data warehouse design
       - Incremental models
-      - Testing and Continuous Integration
+      - Testing + Continuous Integration
       - Documentation + Package Management
       - Design patterns
   - name: Day 3
@@ -52,7 +52,7 @@ canvas {
 				<div class="col-lg-4" style="z-index: 10">
 					<div class="text-contain">
 						<h1 class="h0">&nbsp;</h1>
-                        <a href="#" class="btn btn-primary btn-lg arrow-right">Register now</a>
+                        <a href="https://www.eventbrite.com/e/dbt-learn-february-2019-tickets-53954183415" class="btn btn-primary btn-lg arrow-right">Register now</a>
                     </div>
                 </div>
 			</div>
@@ -74,7 +74,7 @@ canvas {
 		<div class="container">
             <div class="row">
                 <div class='col-lg-8 col-lg-offset-2 text-center'>
-                    <img style="width: 100%" src="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F49366046%2F187109234018%2F1%2Foriginal.jpg?w=800&auto=compress&rect=0%2C23%2C3478%2C1739&s=07f23eba13267ee9d10f5644891820c4" />
+                    <img style="width: 100%" src="https://i.imgur.com/2cJvMJe.jpg" />
                 </div>
             </div>
 			<div class="row">
