changing logo, adjusting text

--- a/_content/index.html
+++ b/_content/index.html
@@ -135,7 +135,7 @@ canvas {
 				<div class="text-contain text-center">
 					<h3 class="h2">Want to learn from the best?</h3>
                     <p><a href="https://www.eventbrite.com/e/dbt-learn-february-2019-tickets-53954183415" class="btn btn-primary btn-lg arrow-right">Register now</a></p>
-                    <p>dbt learn will be hosted in Philadelphia, PA once per month.</p>
+                    <p>dbt learn is hosted monthly in Philadelphia, PA</p>
 				</div>
 			</div>
 		</div>
