--- a/_content/index.html
+++ b/_content/index.html
@@ -1,6 +1,7 @@
 ---
 title: dbt learn
 permalink: /
+render_chart: true
 days:
   - name: Day 1
     activities:
@@ -150,7 +151,3 @@ canvas {
 		</div>
 	</div>
 </div>
-
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
-<script src="/ui/js/helpers/chart.js"></script>
