change group image, temp tagline

--- a/_content/index.html
+++ b/_content/index.html
@@ -44,7 +44,7 @@ canvas {
 			<div class="row">
 				<div class="col-lg-8">
 					<div class="text-contain">
-						<h1 class="h0">Learn from the best</h1>
+						<h1 class="h0">Transform yourself</h1>
                         <p class="text-large">dbt learn is a three day in-person training program designed to <br> empower analysts.</p>
 					</div>
 				</div>
@@ -73,7 +73,7 @@ canvas {
 		<div class="container">
             <div class="row">
                 <div class='col-lg-8 col-lg-offset-2 text-center'>
-                    <img style="width: 100%" src="https://i.imgur.com/2cJvMJe.jpg" />
+                    <img style="width: 100%" src="https://i.imgur.com/bCyllZv.jpg" />
                 </div>
             </div>
 			<div class="row">
