--- a/_content/index.html
+++ b/_content/index.html
@@ -44,7 +44,7 @@ canvas {
 			<div class="row">
 				<div class="col-lg-8">
 					<div class="text-contain">
-						<h1 class="h0">Transform yourself</h1>
+						<h1 class="h0">Beyond analytics</h1>
                         <p class="text-large">dbt learn is a three day in-person training program designed to <br> empower analysts.</p>
 					</div>
 				</div>
