--- a/_content/index.html
+++ b/_content/index.html
@@ -60,7 +60,7 @@ canvas {
 	</div>
     <div class="section-lg" style="padding: 0; margin-top: -100px; margin-bottom: -10px">
         <div class="section-background-chart">
-            <div class="chart">
+            <div class="chart" style="height: 200px">
                 <canvas id="banner" width="800" height="200"></canvas>
             </div>
         </div>
