--- a/_content/index.html
+++ b/_content/index.html
@@ -133,7 +133,7 @@ canvas {
 		<div id="register" class="row">
 			<div class="col-lg-12">
 				<div class="text-contain text-center">
-					<h3 class="h2">Want to learn from the best?</h3>
+					<h3 class="h2">Ready to learn?</h3>
                     <p><a href="https://www.eventbrite.com/e/dbt-learn-february-2019-tickets-53954183415" class="btn btn-primary btn-lg arrow-right">Register now</a></p>
                     <p>dbt learn is hosted monthly in Philadelphia, PA</p>
 				</div>
