change links, update description. TODO: fix agenda

--- a/_content/index.html
+++ b/_content/index.html
@@ -3,25 +3,20 @@ title: dbt learn
 permalink: /
 render_chart: true
 days:
-  - name: Day 1
+  - name:
     activities:
-      - Intro to SQL
-      - Common to Advanced SQL functions
-      - ERDs and executing Joins
       - Creating a style guide
-      - Refactoring "bad" queries
       - Version control (git, bash)
       - Making Pull Requests
-  - name: Day 2
-    activities:
-      - dbt fundamentals
       - Data warehouse design
+      - dbt fundamentals
       - Incremental models
       - Testing + Continuous Integration
       - Documentation + Package Management
       - Design patterns
-  - name: Day 3
+  - name:
     activities:
+      - Understanding dbt + your BI tool
       - Work applications
       - KPIs for business units
       - Optimizing your SQL code
@@ -46,13 +41,13 @@ canvas {
 				<div class="col-lg-8">
 					<div class="text-contain">
 						<h1 class="h0">Beyond analytics</h1>
-                        <p class="text-large">dbt learn is a three day in-person training program designed to <br> empower analysts.</p>
+                        <p class="text-large">dbt learn is an in-person training program designed to <br> empower analysts.</p>
 					</div>
 				</div>
 				<div class="col-lg-4" style="z-index: 10">
 					<div class="text-contain">
 						<h1 class="h0">&nbsp;</h1>
-                        <a href="https://www.eventbrite.com/e/dbt-learn-february-2019-tickets-53954183415" class="btn btn-primary btn-lg arrow-right">Register now</a>
+                        <a href="https://www.eventbrite.com/e/dbt-learn-june-2019-tickets-60106821120" class="btn btn-primary btn-lg arrow-right">Register now</a>
                     </div>
                 </div>
 			</div>
@@ -82,7 +77,7 @@ canvas {
 					<div class="text-contain">
 						<h3 id="about" class="h2">About dbt learn</h3>
 						<p>
-                            dbt learn is a three day in-person training program designed to empower analysts.
+                            dbt learn is an in-person training program designed to empower analysts.
                             The only technical requirement needed is a practical knowledge of SQL, leave the rest to us!
                             Taught by the Fishtown Analytics team, analysts will learn SQL essentials and the in's and out's
                                 of dbt through real-world applications.
@@ -134,8 +129,7 @@ canvas {
 			<div class="col-lg-12">
 				<div class="text-contain text-center">
 					<h3 class="h2">Ready to learn?</h3>
-                    <p><a href="https://www.eventbrite.com/e/dbt-learn-february-2019-tickets-53954183415" class="btn btn-primary btn-lg arrow-right">Register now</a></p>
-                    <p>dbt learn is hosted monthly in Philadelphia, PA</p>
+                    <p><a href="https://www.eventbrite.com/e/dbt-learn-june-2019-tickets-60106821120" class="btn btn-primary btn-lg arrow-right">Register now</a></p>
 				</div>
 			</div>
 		</div>
