--- a/_content/index.html
+++ b/_content/index.html
@@ -67,7 +67,7 @@ canvas {
 		<div class="container">
             <div class="row">
                 <div class='col-lg-8 col-lg-offset-2 text-center'>
-                    <img style="width: 100%" src="https://i.imgur.com/bCyllZv.jpg" />
+                    <img style="width: 100%" src="https://i.imgur.com/RbKJTOY.jpg" />
                 </div>
             </div>
 			<div class="row">
