add interest form, add program details

--- a/_content/index.html
+++ b/_content/index.html
@@ -4,22 +4,20 @@ permalink: /
 render_chart: true
 agenda:
   - activities:
-      - Creating a style guide
-      - Version control (git, bash)
-      - Making Pull Requests
-      - Data warehouse design
       - dbt fundamentals
-      - Incremental models
-      - Testing + Continuous Integration
-      - Documentation + Package Management
-      - Design patterns
-  - activities:
+      - Data warehouse design
       - Understanding dbt + your BI tool
+      - Testing + Continuous Integration
+      - Documentation + Sources
+      - Package management
+      - Design patterns
+
+  - activities:
       - Work applications
       - KPIs for business units
       - Optimizing your SQL code
-      - Using Jinja
-      - Creating a macro
+      - Using Jinja & creating a macro
+      - Incremental models
       - Paired problem sets
       - Presenting technical knowledge
 ---
@@ -122,13 +120,186 @@ canvas {
 </div>
 <div class="section">
 	<div class="container">
-		<div id="register" class="row">
+		<div id="details" class="row">
 			<div class="col-lg-12">
 				<div class="text-contain text-center">
-					<h3 class="h2">Ready to learn?</h3>
-                    <p><a href="https://www.eventbrite.com/e/dbt-learn-june-2019-tickets-60106821120" class="btn btn-primary btn-lg arrow-right">Register now</a></p>
+					<h3 class="h2">What to Expect</h3>
 				</div>
+                    Prequisite:
+                        <li> Webinar for SQL Foundations and Bash/Git/Version Control</li>
+                        <li> Meet with an instructor for 15min to discuss your goals</li>
+                        <li> Detailed set-up instrructions</li>
+                        <br>
+                    During:
+                        <li> Access to presentations and a curated list of resources to further learnings</li>
+                        <li> Taught by three instructors from Fishtown Analytics 👋 </li>
+                        <li> What is dbt and how does it fit into the analytics ecosystem? </li>
+                        <li> dbt fundamentals, including building and testing data models, snapshotting slowly changing dimensions, environment management, and deploying dbt projects to production</li>
+                        <li> Data warehouse design: how we practice Kimball-style modeling in dbt </li>
+                        <li> Documenting your warehouse with dbt Docs </li>
+                        <li> Using dbt’s package management to federate ownership of large dbt projects </li>
+                        <li> Modeling for performance: building tables incrementally </li>
+                        <li> Using Jinja and macros to create dynamic, DRY data models </li>
+                        <li> A paired problemset everyday which students will present at the end of the day </li>
+                        <br>
+                    After:
+                        <li>A cohort of peers to converse and network with</li>
+                        <li>Two weeks post-program to ask your instructors for support</li>
+                        <li>A verified dbt Learn certificate</li>
 			</div>
 		</div>
 	</div>
+</div>
+
+
+<style type="text/css">
+.form-style-5{
+	max-width: 500px;
+	padding: 5px 10px;
+	background: #f4f7f8;
+	margin: 10px auto;
+	padding: 20px;
+	background: #f4f7f8;
+	border-radius: 8px;
+}
+.form-style-5 fieldset{
+	border: none;
+}
+.form-style-5 legend {
+	font-size: 1.0em;
+	margin-bottom: 5px;
+}
+.form-style-5 label {
+	font-size: .8em;
+	display: block;
+	margin-bottom: 5px;
+}
+.form-style-5 input[type="text"],
+.form-style-5 input[type="date"],
+.form-style-5 input[type="datetime"],
+.form-style-5 input[type="email"],
+.form-style-5 input[type="number"],
+.form-style-5 input[type="search"],
+.form-style-5 input[type="time"],
+.form-style-5 input[type="url"],
+.form-style-5 textarea,
+.form-style-5 select {
+	background: rgba(255,255,255,.1);
+	border: none;
+	border-radius: 4px;
+	font-size: 10px;
+	margin: 0;
+	outline: 0;
+	padding: 5px;
+	width: 100%;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	background-color: #e8eeef;
+	color:#8a97a0;
+	-webkit-box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+	box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+	margin-bottom: 20px;
+}
+.form-style-5 input[type="text"]:focus,
+.form-style-5 input[type="date"]:focus,
+.form-style-5 input[type="datetime"]:focus,
+.form-style-5 input[type="email"]:focus,
+.form-style-5 input[type="number"]:focus,
+.form-style-5 input[type="search"]:focus,
+.form-style-5 input[type="time"]:focus,
+.form-style-5 input[type="url"]:focus,
+.form-style-5 textarea:focus,
+.form-style-5 select:focus{
+	background: #d2d9dd;
+}
+.form-style-5 select{
+	-webkit-appearance: menulist-button;
+	height:20px;
+}
+.form-style-5 .number {
+	background: #ff684b;
+	color: #fff;
+	height: 30px;
+	width: 30px;
+	display: inline-block;
+	font-size: 0.625em;
+	margin-right: 4px;
+	line-height: 30px;
+	text-align: center;
+	text-shadow: 0 1px 0 rgba(255,255,255,0.2);
+	border-radius: 15px 15px 15px 0px;
+}
+
+.form-style-5 input[type="submit"],
+.form-style-5 input[type="button"]
+{
+	position: relative;
+	display: block;
+	padding: 19px 39px 18px 39px;
+	color: #FFF;
+	margin: 0 auto;
+	background: #ff684b;
+	font-size: 12px;
+	text-align: center;
+	font-style: normal;
+	width: 100%;
+	border: 1px solid #ff684b;
+	border-width: 1px 1px 3px;
+	margin-bottom: 10px;
+}
+.form-style-5 input[type="submit"]:hover,
+.form-style-5 input[type="button"]:hover
+{
+	background: #ff684b;
+}
+</style>
+<div class="bg-silver-light">
+
+	<div class="mask mask-ne text-white"></div>
+	<div class="mask mask-sw text-white"></div>
+	<div class="section">
+        <div class="text-contain text-center">
+            <h3 id="interest" class="h2">Interest Form</h3>
+        </div>
+        <div class="form-style-5">
+            <form action="https://formspree.io/erica@fishtownanalytics.com" method="POST" />
+              <fieldset>
+              <legend>
+              	<span class="number">1</span> <b> Candidate Info</b>
+              </legend>
+              <p>
+              <input type="text" name="field1" placeholder="Your Name *">
+
+              <input type="email" name="field2" placeholder="Your Email *">
+
+              <label for="job">Session Preference:</label>
+              <select id="job" name="field4">
+                <option value="1">Fall 2019</option>
+                <option value="2">Winter 2020</option>
+                <option value="3">Spring 2020</option>
+                <option value="4">Summer 2020</option>
+                <option value="5">Fall 2020</option>
+              </select>
+                <label for="job">Interested Seats:</label>
+              <select id="job" name="field4">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5+</option>
+              </select>
+              </fieldset>
+              <fieldset>
+              	<legend><span class="number">2</span> <b>Location Preferences</b></legend>
+              <textarea name="field3" placeholder="e.g. Philadelphia, USA (west coast), Europe, etc"></textarea>
+              </fieldset>
+              <fieldset>
+              	<legend><span class="number">3</span> <b>Other Notes</b></legend>
+              <textarea name="field3" placeholder="Additional information or questions"></textarea>
+              </fieldset>
+              <b><input type="submit" value="Be Notified"/></b>
+            </form>
+        </div>
+    </div>
 </div>
