specify form field names

--- a/_content/index.html
+++ b/_content/index.html
@@ -269,12 +269,12 @@ canvas {
               	<span class="number">1</span> <b> Candidate Info</b>
               </legend>
               <p>
-              <input type="text" name="field1" placeholder="Your Name *">
+              <input type="text" name="name" placeholder="Your Name *">
 
-              <input type="email" name="field2" placeholder="Your Email *">
+              <input type="email" name="email" placeholder="Your Email *">
 
               <label for="job">Session Preference:</label>
-              <select id="job" name="field4">
+              <select id="job" name="session">
                 <option value="1">Fall 2019</option>
                 <option value="2">Winter 2020</option>
                 <option value="3">Spring 2020</option>
@@ -282,7 +282,7 @@ canvas {
                 <option value="5">Fall 2020</option>
               </select>
                 <label for="job">Interested Seats:</label>
-              <select id="job" name="field4">
+              <select id="job" name="seats">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -292,11 +292,11 @@ canvas {
               </fieldset>
               <fieldset>
               	<legend><span class="number">2</span> <b>Location Preferences</b></legend>
-              <textarea name="field3" placeholder="e.g. Philadelphia, USA (west coast), Europe, etc"></textarea>
+              <textarea name="location" placeholder="e.g. Philadelphia, USA (west coast), Europe, etc"></textarea>
               </fieldset>
               <fieldset>
               	<legend><span class="number">3</span> <b>Other Notes</b></legend>
-              <textarea name="field3" placeholder="Additional information or questions"></textarea>
+              <textarea name="other" placeholder="Additional information or questions"></textarea>
               </fieldset>
               <b><input type="submit" value="Be Notified"/></b>
             </form>
