--- a/_content/index.html
+++ b/_content/index.html
@@ -81,7 +81,7 @@ canvas {
                                 data through dbt.
                         </p>
 						<ul class="list-icons list-cols text-med text-heading text-left">
-							{% assign checks = 'SQL Literacy; Version Control; Data Warehouses; Automated Testing; Design Patterns; and more!' | split: ';' %}
+							{% assign checks = 'Data Warehouses; Automated Testing; Modeling Strategies; Performance Optimization; Writing DRY code; and more!' | split: ';' %}
 							{% for check in checks %}
 								<li><span class="arrow-check text-red text-large list-icon"></span> {{check}}</li>
 							{% endfor %}
@@ -132,16 +132,18 @@ canvas {
                                 <li> Meet with an instructor for 15min to discuss your goals</li>
                                 <li> Detailed set-up instrructions</li>
                             <h4>During:</h4>
-                                <li> Access to presentations and a curated list of resources to further learnings</li>
-                                <li> Taught by three instructors from Fishtown Analytics 👋 </li>
+                                <li> A two-day course, taught by three instructors from Fishtown Analytics 👋 </li>
                                 <li> What is dbt and how does it fit into the analytics ecosystem? </li>
                                 <li> dbt fundamentals, including building and testing data models, snapshotting slowly changing dimensions, environment management, and deploying dbt projects to production</li>
                                 <li> Data warehouse design: how we practice Kimball-style modeling in dbt </li>
-                                <li> Documenting your warehouse with dbt Docs </li>
+                                <li> Documenting your warehouse with dbt Docs</li>
+                                <li> Utilizing dbt Source to check for data freshness</li>
                                 <li> Using dbt’s package management to federate ownership of large dbt projects </li>
                                 <li> Modeling for performance: building tables incrementally </li>
                                 <li> Using Jinja and macros to create dynamic, DRY data models </li>
+                                <li> How to model strategically while thinking about scalability </li>
                                 <li> A paired problemset everyday which students will present at the end of the day </li>
+                                <li> Access to presentations and a curated list of resources to further learnings</li>
                             <h4>After:</h4>
                                 <li>A cohort of peers to converse and network with</li>
                                 <li>Two weeks post-program to ask your instructors for support</li>
@@ -292,7 +294,7 @@ canvas {
               	<legend><span class="number">3</span> <b>Other Notes</b></legend>
               <textarea name="other" placeholder="Additional information or questions"></textarea>
               </fieldset>
-              <b><input type="submit" value="Let us know"/></b>
+              <b><input type="submit" value="Let us know!"/></b>
         </div>
     </div>
 </div>
